# Cow-bot

./: .env.example  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.json  readme.md  ticket_ids.json  tracked_players.json
.github/workflows/: ci.yml
src/: commands.rs  main.rs  setup.py  startBot.py  test.py
src/commands/: checkPlayer.rs  color.rs  color_command.rs  commands.py  dtag_command.rs  get_linked_account.rs  get_linked_account_command.rs  link.py  link_command.rs  mod.rs  report.py  settings.rs  submit.py  tag_command.rs  tag_utils.rs  track.py  uptime.rs  uptime_command.rs  utils.rs  xprates.py
src/commands/tags/: dtag_command.rs  mod.rs  tag_command.rs  tag_utils.rs
src/data/: database.rs  linked_users.json  mod.rs  ticket_ids.json  tracked_players.json  update_uptime.rs
src/tasks/: mod.rs  update_uptime.rs
src/utils/: accountUtils.py  devUtils.py  permissionUtils.py  playerTracker.py
