[package]
name = "cow_bot"
version = "0.1.1"
edition = "2024"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.42.0", features = ["full"] }
env_logger = "0.11.5"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
serde = { version = "1.0.216", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
thousands = "0.2.0"
lazy_static = "1.5.0"
rusqlite = "0.33.0"
dotenv = "0.15.0"
chrono = "0.4.38"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
log = "0.4.22"
glob = "0.3.2"
mongodb = "3.2.1"
futures = "0.3.31"
bson = { version = "2.0", features = ["chrono-0_4"] }
once_cell = "1.20.3"
