[package]
name = "cow_bot"
version = "0.1.1"
edition = "2024"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.42.0", features = ["full"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
serde = { version = "1.0.216", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
rusqlite = "0.33.0"
chrono = "0.4.38"
mongodb = "3.2.1"
futures = "0.3.31"
bson = { version = "2.0", features = ["chrono-0_4"] }
once_cell = "1.20.3"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
strsim = "0.11.1"
regex = "1.11.1"
